updates diary (+ css to avoid overflow)

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Charmonman&family=Dr+Sugiyama&family=Princess+Sofia&family=Sofia&display=swap');
 
 h1{
-  font-size: 100px ;
+  font-size: 7vw ;
   margin-top: 15px;
   font-family: 'Sofia', cursive;
   text-align: center;
@@ -9,7 +9,11 @@ h1{
   text-shadow: 2px 4px 4px rgba(0,0,0,0.2),
                  0px -5px 10px rgba(255,255,255,0.15);
 }
-
+@media (max-width: 480px){
+    h1{
+        font-size: 17vw;
+    }
+}
 strong{
     background-color: rgba(204,148,233,1);
 }
